--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emotion/is-prop-valid": "latest",
+    "@gsap/react": "^2.1.2",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
@@ -48,7 +49,9 @@
     "date-fns": "3.6.0",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "latest",
+    "gsap": "^3.13.0",
     "input-otp": "1.4.1",
+    "lenis": "^1.3.3",
     "lucide-react": "^0.454.0",
     "motion": "^12.7.4",
     "next": "15.2.4",
