--- a/package.json
+++ b/package.json
@@ -48,12 +48,12 @@
     "cmdk": "1.0.4",
     "date-fns": "3.6.0",
     "embla-carousel-react": "8.5.1",
-    "framer-motion": "latest",
+    "framer-motion": "^12.14.0",
     "gsap": "^3.13.0",
     "input-otp": "1.4.1",
     "lenis": "^1.3.3",
     "lucide-react": "^0.454.0",
-    "motion": "^12.12.1",
+    "motion": "^12.14.0",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
     "ogl": "^1.0.11",
