--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
-    "@react-three/fiber": "^8.18.0",
-    "@react-three/postprocessing": "^2.19.1",
+    "@react-three/drei": "^10.0.8",
+    "@react-three/fiber": "^9.1.2",
+    "@react-three/postprocessing": "^3.0.4",
+    "@react-three/rapier": "^2.1.0",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -53,6 +55,7 @@
     "input-otp": "1.4.1",
     "lenis": "^1.3.3",
     "lucide-react": "^0.454.0",
+    "meshline": "^3.3.1",
     "motion": "^12.14.0",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
