--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
+    "cobe": "^0.6.3",
     "date-fns": "3.6.0",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "^12.14.0",
@@ -56,7 +57,7 @@
     "lenis": "^1.3.3",
     "lucide-react": "^0.454.0",
     "meshline": "^3.3.1",
-    "motion": "^12.14.0",
+    "motion": "^12.15.0",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
     "ogl": "^1.0.11",
